[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a3redis"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "redis >= 5.2.1",
]
authors = [
  {name = "three-kinds", email = "3179158552@qq.com"},
]
description = "a3redis is a simple wrapper around redis-py to make it easier to use."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/three-kinds/a3redis"
Source = "https://github.com/three-kinds/a3redis"

[tool.setuptools.dynamic]
version = {attr = "a3redis.__version__"}

[tool.setuptools.packages.find]
include = ["a3redis*"]

[tool.coverage.run]
source = ["a3redis"]
parallel = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "pass"
]

[tool.mypy]
packages = [
    "a3redis",
    "tests"
]
disable_error_code = [
    "import-untyped",
    "method-assign",
    "abstract",
    "return-value"
]

[tool.ruff]
src = [
    "a3redis",
    "tests"
]
line-length = 120
